# TrainerApp

./: .gitignore  main.py  pyproject.toml  trainer_app.spec
workouts/: 2x20-sweet-spot.json  40-20-intervals.json  4x4.json  z2-endurance.json
